Data viz 1 new exo

--- a/Cursos/Curso_03_Intro_Prog_R_1.ipynb
+++ b/Cursos/Curso_03_Intro_Prog_R_1.ipynb
@@ -191,35 +191,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "16"
-      ],
-      "text/latex": [
-       "16"
-      ],
-      "text/markdown": [
-       "16"
-      ],
-      "text/plain": [
-       "[1] 16"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:4:5: unexpected '*'\n3: \n4: 2 * *\n       ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = x, srcfile = src): <text>:4:5: unexpected '*'\n3: \n4: 2 * *\n       ^\nTraceback:\n"
+     ]
     }
    ],
    "source": [
     "# Lenguajes de programación no perdonan:\n",
     "# Cuidado con la sintaxis. \n",
     "\n",
-    "2 ** 4\n",
+    "2 * * 4\n",
     "\n",
-    "# No pasa nada con los errors, no tengan miedo: experimenten. "
+    "# No pasa nada con los errores, no tengan miedo: experimenten. "
    ]
   },
   {
@@ -1409,9 +1399,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "R 3.3",
+   "display_name": "R",
    "language": "R",
-   "name": "ir33"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -1419,7 +1409,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.3.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
