--- a/Cursos/Curso_03_Intro_Prog_R_1.ipynb
+++ b/Cursos/Curso_03_Intro_Prog_R_1.ipynb
@@ -83,7 +83,7 @@
     }
    ],
    "source": [
-    "3+5"
+    "3 + 5"
    ]
   },
   {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -919,17 +919,24 @@
     }
    ],
    "source": [
-    "# no hay espacios en un nombre\n",
+    "# no hay espacios en un nombre - si hay usen `nombre con espacios`\n",
     "\n",
     "mas de 1 = 2 + 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "`mas de 1` = 2 + 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "mas_de_1 <- 2 + 3\n",
@@ -939,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -976,10 +983,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "7  -> mas.de.1"
@@ -987,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1062,22 +1067,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "17"
+       "10"
       ],
       "text/latex": [
-       "17"
+       "10"
       ],
       "text/markdown": [
-       "17"
+       "10"
       ],
       "text/plain": [
-       "[1] 17"
+       "[1] 10"
       ]
      },
      "metadata": {},
@@ -1153,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1222,10 +1227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# En realidad pop_2000 = 7. Crecimiento mas rápido que exponencial?"
@@ -1233,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1334,22 +1337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "3.38"
+       "2.45564272783782"
       ],
       "text/latex": [
-       "3.38"
+       "2.45564272783782"
       ],
       "text/markdown": [
-       "3.38"
+       "2.45564272783782"
       ],
       "text/plain": [
-       "[1] 3.38"
+       "[1] 2.455643"
       ]
      },
      "metadata": {},
@@ -1365,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1394,6 +1397,13 @@
     "}\n",
     "x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
