--- a/Cursos/Temas Extra/Survival analysis.ipynb
+++ b/Cursos/Temas Extra/Survival analysis.ipynb
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -747,8 +747,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spinograms"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -784,6 +791,13 @@
     "        geom_area() +\n",
     "        scale_y_continuous(labels = scales::percent_format()) +\n",
     "        labs(y = \"% of cetaceans recorded\", x = \"year\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fuzzy joins to group categories"
    ]
   },
   {
@@ -973,7 +987,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Survival Analysis "
+    "## Survival Analysis "
    ]
   },
   {
