--- a/Cursos/Curso_15_Regression for prediction and understanding.ipynb
+++ b/Cursos/Curso_15_Regression for prediction and understanding.ipynb
@@ -600,7 +600,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.0"
+   "version": "4.0.0"
   }
  },
  "nbformat": 4,
